made location map responsive, instead of fixed dimensions. changed removal of items on mobile, but addition of items on larger viewing sizes, readme updated to reflect this

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,10 @@ nav {
     font-size: 4rem;
 }
 
+#query-type-label {
+    margin-bottom: 0.5rem;
+}
+
 /* "Footer" Section Styling */
 
 #socials {
@@ -232,3 +236,8 @@ nav {
 }
 
 /* testing */
+
+iframe {
+    width: 95%;
+    height: 60%;
+}
